fix: missing dependencies

--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.3",
+    "http-proxy-middleware": "^2.0.3",
+    "morgan": "^1.10.0"
+  }
 }
